--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,10 @@
-name: Build Release
-
 on:
   push:
     tags:
-      - v**
+      - v1.**
+  workflow_dispatch:
 
+name: Build Release
 jobs:
   release:
     name: Create Release
