--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,6 +49,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./pup.${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
-          asset_name: pup.${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
+          asset_path: ./pup-${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
+          asset_name: pup-${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
           asset_content_type: application/octet-stream
