--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,14 +1,14 @@
+name: Build Release
 on:
   push:
     tags:
-      - v1.**
+      - v**
+  workflow_dispatch:
 
-workflow_dispatch:
-
-name: Build Release
 jobs:
-  release:
-    name: Create Release
+  release-bin:
+    permissions: write-all
+    name: Create Release Binary
 
     strategy:
       matrix:
@@ -26,13 +26,12 @@ jobs:
         with:
           go-version: 1.21
 
-      - name: Build
-        run: |
-          go build -o pup-${{ matrix.os }}-${{ matrix.architecture }}
-
       - name: Get Tag from Git Reference
         id: get_tag
         run: echo "::set-output name=tag::$(echo $GITHUB_REF | sed -n 's/refs\/tags\///p')"
+
+      - name: Build
+        run: go build -o pup-${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
 
       - name: Create Release
         id: create_release
@@ -47,8 +46,10 @@ jobs:
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./pup-${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
+          asset_path: pup-${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
           asset_name: pup-${{ steps.get_tag.outputs.tag }}-${{ matrix.os }}-${{ matrix.architecture }}
           asset_content_type: application/octet-stream
